# clickup_framework

./: .codex_tmp_task_move_bug_docs.md  .codex_tmp_task_move_bug_impl.md  .codex_tmp_task_move_bug_parent.md  .codex_tmp_task_move_bug_tests.md  .ctags  .diagram-pipeline-benchmark.yaml  .diagram-pipeline-test.yaml  .diagram-pipeline.yaml  .gitignore  .gitlab-ci-example.yml  .pre-commit-config.yaml  =3.0.0  AGENTS.md  BENCHMARKS.md  CLAUDE.md  CLICKUP.md  CLI_COMMAND_REFERENCE.md  COMMAND_REFERENCE.md  CTAGS_INTEGRATION_EXAMPLE.md  CTAGS_QUICK_REFERENCE.md  CTAGS_SETUP.md  CTAGS_WINDOWS_SETUP.md  CtagsMapper.psm1  DOCS_CLI_TEST_SUMMARY.md  DOCS_SMART_INDICATORS.md  EXECUTION_ANALYSIS.md  EXECUTION_GRAPH_USAGE.md  Gemini.md  ISSUE_ARGUMENT_PARSING_ERROR.md  LANGUAGE_CONFIG_GUIDE.md  LESSONS_LEARNED.md  MERMAID_UPLOAD_FIX.md  MIGRATION_GUIDE.md  PHASE4_REFACTORING_SUMMARY.md  PHASE5_GENERATOR_SEPARATION_SUMMARY.md  PRODUCTIVEINBOX_TEST_RESULTS.md  PR_DESCRIPTION.md  README-MCP.md  README.md  REMOVE_SCRAP_INSTRUCTIONS.md  (+86 more)
.claude/: settings.json
.codex_tmp_diagram_diff/: after.mmd  before.mmd  diagram_diff_visual.md
.githooks/: pre-commit
.github/: README.md  copilot-instructions.md  copilot-settings.md
.trace_history/: trace_test_demo_20251119_142641.json
benchmark_output/: bench-01-overview.md  bench-02-api-classes.md  bench-03-cmd-classes.md  bench-04-languages.md  bench-05-components.md  bench-06-utils.md  bench-07-resources.md  bench-08-mermaid.md  bench-09-sequence.md  bench-10-cmd-pie.md
bookmarklets/: README.md  README_PERSISTENT.md  README_SERVICE_WORKER.md  auto_inject_bookmarklet.js  install_auto_inject.js  install_persistent.js  install_persistent_localStorage.js  quick_install.js  register_service_worker.js  tampermonkey_script.user.js  task_type_manager.bookmarklet.js  task_type_manager.html  task_type_manager.js  task_type_manager_complete.js  task_type_manager_service_worker.js  task_type_manager_sidebar.bookmarklet.js  task_type_manager_sidebar.js  task_type_manager_standalone.html  uninstall_persistent.js  update_task_type_descriptions.bookmarklet.js  update_task_type_descriptions.js
clickup_framework/: __init__.py  __main__.py  cli.py  cli_error_handler.py  clickup_constants.py  client.py  context.py  exceptions.py  mcp_server.py  mcp_tools.py  rate_limiter.py
command_specs/: 86c6e0q0b.md  86c6e0q0d.md  86c6e0q0f.md  86c6e0q0g.md  86c6e0q0h.md  86c6e0q0j.md  86c6e0q0m.md
docs/: COMMENT_FORMAT.md  DOCUMENTATION_GUIDE.md  HTML_EXPORT_GUIDE.md  LESSONS_LEARNED.md  MARKDOWN_FORMATTING_GUIDE.md  MERMAID_CHART_EXAMPLES.md  MERMAID_DIAGRAMS.md  PARENT_AUTO_UPDATE.md  Python Coder Profile.md  TASK_WORKFLOW_GUIDE.md  clickup_framework.lnk  git_overflow_action_plan.md  git_pull_commands_spec.md
examples/: .env.example  claude-desktop-config-dev.json  claude-desktop-config.json  cli_examples.sh  detail_view_example.py  display_components_example.py  markdown_formatting_example.py  test_image_upload.py  test_mermaid_generation.py  test_mermaid_no_cli.py
knowledge/: WebGL_Shader_Effect_Specification.md  WebGL_Shader_Library_Specification.md  WebGL_Shader_Performance_Optimization_Specification.md  WebGL_Shader_Program_Specification.md  getting-started-with-webgl_mozilla.md  rendering-svg-paths-in-webgl.md  webgl-2d-graphics-tutorial.md  webgl-coordinate-systems-explained.md
mdmermaidtests/: PUPPETEER_VERSION_INFO.md  README.md  SUMMARY.md  (+3 more)
(+775 files in other folders)
