[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clickup-framework"
dynamic = ["version"]
description = "Token-Efficient Modular Skill Framework for ClickUp API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "ClickUp Skills Development Team"}
]
keywords = ["clickup", "api", "token-efficient", "formatters", "skills", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "argcomplete>=3.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
]

[project.urls]
Documentation = "https://github.com/SOELexicon/clickup_framework/tree/main/docs"
Source = "https://github.com/SOELexicon/clickup_framework"
Issues = "https://github.com/SOELexicon/clickup_framework/issues"

[project.scripts]
clickup = "clickup_framework.cli:main"
cum = "clickup_framework.cli:main"
clickup-mcp = "clickup_framework.mcp_server:main"

[tool.setuptools.packages.find]
# Standard package layout with clickup_framework/ directory
exclude = ["scripts*", "tests*"]

[tool.setuptools_scm]
write_to = "clickup_framework/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
